--- a/style.css
+++ b/style.css
@@ -29,3 +29,13 @@ align-items: center;
 .nav-bar a:hover{
     text-decoration: underline;
 }
+.banner-heading{
+    position: absolute;
+    left: 28%;
+    top: 50%;
+    font-size: 3rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0,0,0.7);
+
+
+}
